--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,11 +17,12 @@ jobs:
       - name: Install MSYS2
         uses: msys2/setup-msys2@v2
         with:
-          msystem: MINGW32
+          msystem: MINGW64
           update: true
           install: >-
             git
             make
+            mingw-w64-x86_64-qemu
             mingw-w64-i686-toolchain
             mingw-w64-i686-SDL2
             mingw-w64-i686-zlib
@@ -39,7 +40,8 @@ jobs:
           cp build/ntsc-final-port/pd.exe bin/
           cp build/pal-final-port/pd.pal.exe bin/
           cp build/jpn-final-port/pd.jpn.exe bin/
-          cp /mingw32/bin/{SDL2.dll,zlib1.dll,libgcc_s_dw2-1.dll,libwinpthread-1.dll} bin/
+          cp /mingw32/bin/*.dll bin/
+          cp /mingw64/bin/*.dll bin/qmudlls/
           touch bin/data/put_your_rom_here.txt
       - name: Upload artifact
         uses: actions/upload-artifact@v4
